--- a/index.html
+++ b/index.html
@@ -2,17 +2,186 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Effective Solutions for Your Business" />
+    <title>Web Studio (Version 4.0)</title>
   </head>
   <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
-      exercitationem repudiandae, id culpa excepturi sunt corrupti alias facilis
-      molestiae! Praesentium temporibus fugiat enim necessitatibus ab officia
-      sed cupiditate velit tenetur!
-    </p>
+    <header>
+      <!--Top Line-->
+      <table>
+        <tr>
+          <td>
+            <nav>
+              <a href="https://devstudio.com/">WEBSTUDIO</a>
+              <a href="https://devstudio.com/Studio/">Studio</a>
+              <a href="https://devstudio.com/Portfolio/">Portfolio</a>
+              <a href="https://devstudio.com/Contacts/">Contacts</a>
+              <a href="https://instagram.com/goitclub"></a>
+            </nav>
+          </td>
+          <td>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </td>
+        </tr>
+      </table>
+    </header>
+
+    <main>
+      <!--hero image-->
+      <h1>
+        Effective Solutions <br />
+        for Your Business
+      </h1>
+      <button type="button">Order Service</button>
+
+      <section1>
+        <table>
+          <tr>
+            <ul>
+              <!--Feature 1-->
+              <td>
+                <li>
+                  <h3>Strategy</h3>
+                  <p>
+                    Our goal is to identify the business problem <br />
+                    to walk away with the perfect and creative solution.
+                  </p>
+                </li>
+              </td>
+              <!--Feature 2-->
+              <td>
+                <li>
+                  <h3>Punctuality</h3>
+                  <p>
+                    Bring the key message to the brand's audience for the best
+                    price within the shortest possible time.
+                  </p>
+                </li>
+              </td>
+              <!--Feature 3-->
+              <td>
+                <li>
+                  <h3>Diligence</h3>
+                  <p>
+                    Research and confirm brands that present the strongest
+                    digital growth opportunities and minimize risk.
+                  </p>
+                </li>
+              </td>
+              <!--Feature 4-->
+              <td>
+                <li>
+                  <h3>Technologies</h3>
+                  <p>
+                    Design practice focused on digital experiences. We bring
+                    forth a deep passion for problem-solving.
+                  </p>
+                </li>
+              </td>
+            </ul>
+          </tr>
+        </table>
+      </section1>
+
+      <section2>
+        <h2>What are we doing</h2>
+        <table>
+          <tr>
+            <ul>
+              <td>
+                <li>
+                  <img
+                    src="/images/section2/img1.jpg"
+                    width="360"
+                    alt="create your own perfect website"
+                  />
+                </li>
+              </td>
+              <td>
+                <li>
+                  <img
+                    src="/images/section2/img2.jpg"
+                    width="360px"
+                    alt="create best applications"
+                  />
+                </li>
+              </td>
+              <td>
+                <li>
+                  <img
+                    src="/images/section2/img3.jpg"
+                    width="360px"
+                    alt="synchronize applications with desktop programs"
+                  />
+                </li>
+              </td>
+            </ul>
+          </tr>
+        </table>
+      </section2>
+
+      <section3>
+        <h2>Our Team</h2>
+        <table>
+          <tr>
+            <ul>
+              <td>
+                <li>
+                  <img
+                    src="/images/section3/TeamCard1/img.jpg"
+                    width="264px"
+                    alt="Mark Guerrero"
+                  />
+                  <h3>Mark Guerrero</h3>
+                  <p>Product Designer</p>
+                </li>
+              </td>
+              <td>
+                <li>
+                  <img
+                    src="/images/section3/TeamCard2/img.jpg"
+                    width="264px"
+                    alt="Tom Ford"
+                  />
+                  <h3>Tom Ford</h3>
+                  <p>Frontend Developer</p>
+                </li>
+              </td>
+              <td>
+                <li>
+                  <img
+                    src="/images/section3/TeamCard3/img.jpg"
+                    width="264px"
+                    alt="Camila Garcia"
+                  />
+                  <h3>Camila Garcia</h3>
+                  <p>Marketing</p>
+                </li>
+              </td>
+              <td>
+                <li>
+                  <img
+                    src="/images/section3/TeamCard4/img.jpg"
+                    width="264px"
+                    alt="Daniel Wilson"
+                  />
+                  <h3>Daniel Wilson</h3>
+                  <p>UI Designer</p>
+                </li>
+              </td>
+            </ul>
+          </tr>
+        </table>
+      </section3>
+    </main>
+
+    <footer>
+      <a href="https://devstudio.com/">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
