goit-markup-hw-01-check1

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section2/img1.jpg"
+                    src="./images/section2/img1.jpg"
                     width="360"
                     alt="create your own perfect website"
                   />
@@ -101,7 +101,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section2/img2.jpg"
+                    src="./images/section2/img2.jpg"
                     width="360px"
                     alt="create best applications"
                   />
@@ -110,7 +110,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section2/img3.jpg"
+                    src="./images/section2/img3.jpg"
                     width="360px"
                     alt="synchronize applications with desktop programs"
                   />
@@ -129,7 +129,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section3/TeamCard1/img.jpg"
+                    src="./images/section3/TeamCard1/img.jpg"
                     width="264px"
                     alt="Mark Guerrero"
                   />
@@ -140,7 +140,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section3/TeamCard2/img.jpg"
+                    src="./images/section3/TeamCard2/img.jpg"
                     width="264px"
                     alt="Tom Ford"
                   />
@@ -151,7 +151,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section3/TeamCard3/img.jpg"
+                    src="./images/section3/TeamCard3/img.jpg"
                     width="264px"
                     alt="Camila Garcia"
                   />
@@ -162,7 +162,7 @@
               <td>
                 <li>
                   <img
-                    src="/images/section3/TeamCard4/img.jpg"
+                    src="./images/section3/TeamCard4/img.jpg"
                     width="264px"
                     alt="Daniel Wilson"
                   />
