--- a/index.html
+++ b/index.html
@@ -35,145 +35,105 @@
       </h1>
       <button type="button">Order Service</button>
 
-      <section1>
-        <table>
-          <tr>
-            <ul>
-              <!--Feature 1-->
-              <td>
-                <li>
-                  <h3>Strategy</h3>
-                  <p>
-                    Our goal is to identify the business problem <br />
-                    to walk away with the perfect and creative solution.
-                  </p>
-                </li>
-              </td>
-              <!--Feature 2-->
-              <td>
-                <li>
-                  <h3>Punctuality</h3>
-                  <p>
-                    Bring the key message to the brand's audience for the best
-                    price within the shortest possible time.
-                  </p>
-                </li>
-              </td>
-              <!--Feature 3-->
-              <td>
-                <li>
-                  <h3>Diligence</h3>
-                  <p>
-                    Research and confirm brands that present the strongest
-                    digital growth opportunities and minimize risk.
-                  </p>
-                </li>
-              </td>
-              <!--Feature 4-->
-              <td>
-                <li>
-                  <h3>Technologies</h3>
-                  <p>
-                    Design practice focused on digital experiences. We bring
-                    forth a deep passion for problem-solving.
-                  </p>
-                </li>
-              </td>
-            </ul>
-          </tr>
-        </table>
-      </section1>
+      <ul>
+        <!--Feature 1-->
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem <br />
+            to walk away with the perfect and creative solution.
+          </p>
+        </li>
+        <!--Feature 2-->
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <!--Feature 3-->
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <!--Feature 4-->
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
 
-      <section2>
-        <h2>What are we doing</h2>
-        <table>
-          <tr>
-            <ul>
-              <td>
-                <li>
-                  <img
-                    src="./images/section2/img1.jpg"
-                    width="360"
-                    alt="create your own perfect website"
-                  />
-                </li>
-              </td>
-              <td>
-                <li>
-                  <img
-                    src="./images/section2/img2.jpg"
-                    width="360px"
-                    alt="create best applications"
-                  />
-                </li>
-              </td>
-              <td>
-                <li>
-                  <img
-                    src="./images/section2/img3.jpg"
-                    width="360px"
-                    alt="synchronize applications with desktop programs"
-                  />
-                </li>
-              </td>
-            </ul>
-          </tr>
-        </table>
-      </section2>
+      <h2>What are we doing</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/section2/img1.jpg"
+            width="360"
+            alt="create your own perfect website"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/section2/img2.jpg"
+            width="360px"
+            alt="create best applications"
+          />
+        </li>
+        <li>
+          <img
+            src="./images/section2/img3.jpg"
+            width="360px"
+            alt="synchronize applications with desktop programs"
+          />
+        </li>
+      </ul>
 
-      <section3>
-        <h2>Our Team</h2>
-        <table>
-          <tr>
-            <ul>
-              <td>
-                <li>
-                  <img
-                    src="./images/section3/TeamCard1/img.jpg"
-                    width="264px"
-                    alt="Mark Guerrero"
-                  />
-                  <h3>Mark Guerrero</h3>
-                  <p>Product Designer</p>
-                </li>
-              </td>
-              <td>
-                <li>
-                  <img
-                    src="./images/section3/TeamCard2/img.jpg"
-                    width="264px"
-                    alt="Tom Ford"
-                  />
-                  <h3>Tom Ford</h3>
-                  <p>Frontend Developer</p>
-                </li>
-              </td>
-              <td>
-                <li>
-                  <img
-                    src="./images/section3/TeamCard3/img.jpg"
-                    width="264px"
-                    alt="Camila Garcia"
-                  />
-                  <h3>Camila Garcia</h3>
-                  <p>Marketing</p>
-                </li>
-              </td>
-              <td>
-                <li>
-                  <img
-                    src="./images/section3/TeamCard4/img.jpg"
-                    width="264px"
-                    alt="Daniel Wilson"
-                  />
-                  <h3>Daniel Wilson</h3>
-                  <p>UI Designer</p>
-                </li>
-              </td>
-            </ul>
-          </tr>
-        </table>
-      </section3>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/section3/TeamCard1/img.jpg"
+            width="264px"
+            alt="Mark Guerrero"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img
+            src="./images/section3/TeamCard2/img.jpg"
+            width="264px"
+            alt="Tom Ford"
+          />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="./images/section3/TeamCard3/img.jpg"
+            width="264px"
+            alt="Camila Garcia"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/section3/TeamCard4/img.jpg"
+            width="264px"
+            alt="Daniel Wilson"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
     </main>
 
     <footer>
