--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <li>
           <img
             src="./images/section2/img2.jpg"
-            width="360px"
+            width="360"
             alt="create best applications"
           />
         </li>
         <li>
           <img
             src="./images/section2/img3.jpg"
-            width="360px"
+            width="360"
             alt="synchronize applications with desktop programs"
           />
         </li>
@@ -100,7 +100,7 @@
         <li>
           <img
             src="./images/section3/TeamCard1/img.jpg"
-            width="264px"
+            width="264"
             alt="Mark Guerrero"
           />
           <h3>Mark Guerrero</h3>
@@ -109,7 +109,7 @@
         <li>
           <img
             src="./images/section3/TeamCard2/img.jpg"
-            width="264px"
+            width="264"
             alt="Tom Ford"
           />
           <h3>Tom Ford</h3>
@@ -118,7 +118,7 @@
         <li>
           <img
             src="./images/section3/TeamCard3/img.jpg"
-            width="264px"
+            width="264"
             alt="Camila Garcia"
           />
           <h3>Camila Garcia</h3>
@@ -127,7 +127,7 @@
         <li>
           <img
             src="./images/section3/TeamCard4/img.jpg"
-            width="264px"
+            width="264"
             alt="Daniel Wilson"
           />
           <h3>Daniel Wilson</h3>
