--- a/index.html
+++ b/index.html
@@ -7,137 +7,130 @@
   </head>
   <body>
     <header>
-      <!--Top Line-->
-      <table>
-        <tr>
-          <td>
-            <nav>
-              <a href="https://devstudio.com/">WEBSTUDIO</a>
-              <a href="https://devstudio.com/Studio/">Studio</a>
-              <a href="https://devstudio.com/Portfolio/">Portfolio</a>
-              <a href="https://devstudio.com/Contacts/">Contacts</a>
-              <a href="https://instagram.com/goitclub"></a>
-            </nav>
-          </td>
-          <td>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </td>
-        </tr>
-      </table>
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
-      <!--hero image-->
-      <h1>
-        Effective Solutions <br />
-        for Your Business
-      </h1>
-      <button type="button">Order Service</button>
-
-      <ul>
-        <!--Feature 1-->
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem <br />
-            to walk away with the perfect and creative solution.
-          </p>
-        </li>
-        <!--Feature 2-->
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <!--Feature 3-->
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <!--Feature 4-->
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/section2/img1.jpg"
-            width="360"
-            alt="create your own perfect website"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/section2/img2.jpg"
-            width="360"
-            alt="create best applications"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/section2/img3.jpg"
-            width="360"
-            alt="synchronize applications with desktop programs"
-          />
-        </li>
-      </ul>
-
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/section3/TeamCard1/img.jpg"
-            width="264"
-            alt="Mark Guerrero"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img
-            src="./images/section3/TeamCard2/img.jpg"
-            width="264"
-            alt="Tom Ford"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="./images/section3/TeamCard3/img.jpg"
-            width="264"
-            alt="Camila Garcia"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/section3/TeamCard4/img.jpg"
-            width="264"
-            alt="Daniel Wilson"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <h2>description</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem <br />
+              to walk away with the perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/section2/img1.jpg"
+              width="360"
+              alt="create your own perfect website"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section2/img2.jpg"
+              width="360"
+              alt="create best applications"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/section2/img3.jpg"
+              width="360"
+              alt="synchronize applications with desktop programs"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/section3/TeamCard1/img.jpg"
+              width="264"
+              alt="Mark Guerrero"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/TeamCard2/img.jpg"
+              width="264"
+              alt="Tom Ford"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/TeamCard3/img.jpg"
+              width="264"
+              alt="Camila Garcia"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/section3/TeamCard4/img.jpg"
+              width="264"
+              alt="Daniel Wilson"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-
     <footer>
-      <a href="https://devstudio.com/">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
